# miden-points-contract

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
contracts/badge-account/: Cargo.toml
contracts/badge-account/src/: lib.rs
contracts/badge-note/: Cargo.toml
contracts/badge-note/src/: lib.rs
contracts/counter-account/: Cargo.toml
contracts/increment-note/: Cargo.toml
contracts/level-account/: Cargo.toml
contracts/level-account/src/: lib.rs
contracts/level-note/: Cargo.toml
contracts/level-note/src/: lib.rs
contracts/points-account/: Cargo.toml
contracts/points-account/src/: lib.rs
contracts/points-note/: Cargo.toml
contracts/points-note/src/: lib.rs
contracts/quest-account/: Cargo.toml
contracts/quest-account/src/: lib.rs
contracts/quest-note/: Cargo.toml
contracts/quest-note/src/: lib.rs
contracts/reputation-account/: Cargo.toml
contracts/reputation-account/src/: lib.rs
contracts/reputation-note/: Cargo.toml
contracts/reputation-note/src/: lib.rs
integration/: Cargo.toml
integration/src/: helpers.rs
integration/tests/: counter_test.rs
