[package]
name = "badge-note"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
miden = { version = "0.12" }

[package.metadata.component]
package = "miden:badge-note"

[package.metadata.miden.dependencies]
"miden:badge-account" = { path = "../badge-account" }

[package.metadata.component.target.dependencies]
"miden:badge-account" = { path = "../badge-account/target/generated-wit/" }

[package.metadata.miden]
project-kind = "note-script"
