[package]
name = "points-note"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
miden = { version = "0.12" }

[package.metadata.component]
package = "miden:points-note"

[package.metadata.miden.dependencies]
"miden:points-account" = { path = "../points-account" }

[package.metadata.component.target.dependencies]
"miden:points-account" = { path = "../points-account/target/generated-wit/" }

[package.metadata.miden]
project-kind = "note-script"
