[package]
name = "quest-note"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
miden = { version = "0.12" }

[package.metadata.component]
package = "miden:quest-note"

[package.metadata.miden.dependencies]
"miden:quest-account" = { path = "../quest-account" }

[package.metadata.component.target.dependencies]
"miden:quest-account" = { path = "../quest-account/target/generated-wit/" }

[package.metadata.miden]
project-kind = "note-script"
