[package]
name = "reputation-note"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
miden = { version = "0.12" }

[package.metadata.component]
package = "miden:reputation-note"

[package.metadata.miden.dependencies]
"miden:reputation-account" = { path = "../reputation-account" }

[package.metadata.component.target.dependencies]
"miden:reputation-account" = { path = "../reputation-account/target/generated-wit/" }

[package.metadata.miden]
project-kind = "note-script"
